# Talks

./: .gitignore  .gitmodules  LICENSE.md  README.md
2018 - Meeting C++/: CMakeLists.txt
2018 - Meeting C++/src/: CMakeLists.txt  Shapes.cpp  TextsFonts.cpp  VertexArraysBuffers.cpp
2023 - Team Meeting/: CMakeLists.txt
2023 - Team Meeting/SFML 2D Graphics/: SFML 2D Graphics.sln
2023 - Team Meeting/SFML 2D Graphics/MainLoop/: Program.cs
2023 - Team Meeting/SFML 2D Graphics/Shapes/: Program.cs  Shapes.csproj
2023 - Team Meeting/SFML 2D Graphics/SpritesTextures/: Program.cs  SpritesTextures.csproj
2023 - Team Meeting/SFML 2D Graphics/TextsFonts/: Program.cs  TextsFonts.csproj
2023 - Team Meeting/SFML 2D Graphics/VertexArraysBuffers/: Program.cs  TileMap.cs  VertexArraysBuffers.csproj
2023 - Team Meeting/src/: MainLoop.cpp  SpritesTextures.cpp
2024 - Team Meeting/: Clockify OpenAPI.json  Demo01.json  Demo02.json
2024 - Team Meeting/Mockoon/: Mockoon.sln
2024 - Team Meeting/Mockoon/Demo01/: Program.cs
2024 - Team Meeting/Mockoon/Demo02/: Demo02.csproj  Program.cs
